changed resume link and chat btn sizes

--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 
   <!--Style-->
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400|Yeseva+One" rel="stylesheet">
-  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.0/css/all.css" integrity="sha384-lZN37f5QGtY3VHgisS14W3ExzMWZxybE1SJSEsQp9S+oqd12jhcu+A56Ebc1zFSJ"
-    crossorigin="anonymous">
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.0/css/all.css"
+    integrity="sha384-lZN37f5QGtY3VHgisS14W3ExzMWZxybE1SJSEsQp9S+oqd12jhcu+A56Ebc1zFSJ" crossorigin="anonymous">
   <link rel="stylesheet" type="text/css" media="screen" href="assets/css/reset.css" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
   <link rel="stylesheet" type="text/css" media="screen" href="assets/css/style.css" />
@@ -57,20 +57,20 @@
               </div>
             </div>
           </div>
-          
+
           <!--SideNav-->
-            <ul id="slide-out" class="sidenav col m2 offset-m1 sidenav-fixed">
-              <ul class="right hide-on-med-and-down" id="navLinks">
-                <li><a href="about.html" class="waves-effect" id="aboutLink">about</a></li>
-                <li><a href="projects.html" class="waves-effect" id="projectsLink">projects</a></li>
-                <li><a href="contact.html" class="waves-effect" id="contactLink">contact</a></li>
-                <li><a href="index.html" class="waves-effect" id="homeLink">home</a></li>
-              </ul>
+          <ul id="slide-out" class="sidenav col m2 offset-m1 sidenav-fixed">
+            <ul class="right hide-on-med-and-down" id="navLinks">
+              <li><a href="about.html" class="waves-effect" id="aboutLink">about</a></li>
+              <li><a href="projects.html" class="waves-effect" id="projectsLink">projects</a></li>
+              <li><a href="contact.html" class="waves-effect" id="contactLink">contact</a></li>
+              <li><a href="index.html" class="waves-effect" id="homeLink">home</a></li>
             </ul>
-          
-        </div>
+          </ul>
+
         </div>
       </div>
+    </div>
     </div>
 
     <!-- Floating Action Button-->
@@ -79,12 +79,15 @@
         <i class="large fas fa-user-plus"></i>
       </a>
       <ul>
-        <li><a class="btn-floating hvr-bob linkedIn" href="https://www.linkedin.com/in/katherine-white-274877a/" target="_blank"><i
-              class="fab fa-linkedin-in"></i></a></li>
-        <li><a class="btn-floating hvr-bob resume" href="https://docs.google.com/document/d/1oj4fceJ3kBA28p8bTujelqkgblZPE-_zoVXRME4rG64/edit?usp=sharing"
+        <li><a class="btn-floating hvr-bob linkedIn" href="https://www.linkedin.com/in/katherine-white-274877a/"
+            target="_blank"><i class="fab fa-linkedin-in"></i></a></li>
+        <li><a class="btn-floating hvr-bob resume"
+            href="https://docs.google.com/document/d/1BWWLPrXjzmj6cTflkkZkqgMSaWYW19XfqFL0kTnheP0/edit?usp=sharing"
             target="_blank"><i class="fas fa-file"></i></a></li>
-        <li><a class="btn-floating hvr-bob github" href="https://github.com/k8blanco" target="_blank"><i class="fab fa-github"></i></a></li>
-        <li><a class="btn-floating hvr-bob email" href="mailto:katiewhite303@gmail.com?Subject=Inquiry" target="_top"><i class="far fa-envelope"></i></a></li>
+        <li><a class="btn-floating hvr-bob github" href="https://github.com/k8blanco" target="_blank"><i
+              class="fab fa-github"></i></a></li>
+        <li><a class="btn-floating hvr-bob email" href="mailto:katiewhite303@gmail.com?Subject=Inquiry" target="_top"><i
+              class="far fa-envelope"></i></a></li>
       </ul>
     </div>
 
